--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.lusifer.shabdkosh.MainActivity">
+        tools:context="com.lusifer.shabdkosh.ui.MainActivity">
 
     <TextView
             android:layout_width="wrap_content"
