--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="search_view_inset">5dp</dimen>
+    <dimen name="main_appbar_height">100dp</dimen>
+    <dimen name="main_appbar_top_padding">5dp</dimen>
 </resources>
