--- a/app/src/main/res/layout/content_detail_partofspeech_data.xml
+++ b/app/src/main/res/layout/content_detail_partofspeech_data.xml
@@ -11,9 +11,9 @@
         android:id="@+id/tvId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="@dimen/id_margin_left"
+        android:layout_marginStart="@dimen/id_margin_left"
+        android:layout_marginTop="@dimen/id_margin_top"
         android:textColor="@color/black"
         tools:text="1."/>
 
@@ -33,7 +33,7 @@ kjvhkjxchkjkjkxvc"/>
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvWordDescription"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/flexbox_margin_top"
         android:layout_toEndOf="@id/tvId"
         android:layout_toRightOf="@id/tvId"
         app:showDivider="middle"
@@ -47,11 +47,11 @@ kjvhkjxchkjkjkxvc"/>
     <View
         android:id="@+id/vDividerDescription"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/divider_description_height"
         android:layout_alignLeft="@id/tvId"
         android:layout_alignStart="@id/tvId"
         android:layout_below="@id/flSynonyms"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/divider_description_margin_top"
         android:background="#12000000"/>
 
 </RelativeLayout>
