--- a/app/src/main/res/layout/item_recent_and_favourite_recycler_view.xml
+++ b/app/src/main/res/layout/item_recent_and_favourite_recycler_view.xml
@@ -12,12 +12,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Title"
-            android:textSize="24sp"/>
+            android:textSize="@dimen/item_word_text_size"/>
 
     <TextView
             tools:text="Noun, Verb"
             android:id="@+id/tvPartOfSpeech"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/item_partofspeech_text_size"/>
 </LinearLayout>
