--- a/app/src/main/res/layout/item_widget.xml
+++ b/app/src/main/res/layout/item_widget.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         tools:text="Title"
         android:textColor="@color/black"
-        android:textSize="16sp"/>
+        android:textSize="@dimen/text_size_word_widget"/>
 
     <TextView
         tools:text="Noun, Verb"
@@ -22,5 +22,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/gray_active_icon"
-        android:textSize="12sp"/>
+        android:textSize="@dimen/text_size_partofspeech_widget"/>
 </LinearLayout>
