--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -2,6 +2,8 @@
 <appwidget-provider
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/widget_recent"
-    android:minHeight="110dp"
-    android:minWidth="250dp"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:minHeight="@dimen/height_widget"
+    android:minWidth="@dimen/width_widget"
     android:updatePeriodMillis="3600"/>
