--- a/app/src/main/res/layout/widget_recent.xml
+++ b/app/src/main/res/layout/widget_recent.xml
@@ -4,5 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="3dp"
-    android:layout_marginTop="3dp"/>
+    android:layout_marginLeft="@dimen/margin_widget_recent"
+    android:layout_marginStart="@dimen/margin_widget_recent"
+    android:layout_marginTop="@dimen/margin_widget_recent"/>
