--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#70318a</color>
+    <color name="colorPrimaryDark">#421c52</color>
+    <color name="colorAccent">#E1BEE7</color>
+    <color name="grayBackground">#e0e0e0</color>
 </resources>
