--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,18 @@
     <dimen name="divider_description_margin_top">8dp</dimen>
     <dimen name="item_word_text_size">24sp</dimen>
     <dimen name="item_partofspeech_text_size">16sp</dimen>
+    <dimen name="width_logo_splash">80dp</dimen>
+    <dimen name="height_logo_splash">80dp</dimen>
+    <dimen name="margin_top_logo_splash">150dp</dimen>
+    <dimen name="height_view_splash">15dp</dimen>
+    <dimen name="margin_top_app_name_splash">10dp</dimen>
+    <dimen name="text_size_splash_app_name">16sp</dimen>
+    <dimen name="image_margin_top">15dp</dimen>
+    <dimen name="height_progressbar_splash">15dp</dimen>
+    <dimen name="margin_top_progressbar_splash">10dp</dimen>
+    <dimen name="text_size_word_widget">16sp</dimen>
+    <dimen name="text_size_partofspeech_widget">12sp</dimen>
+    <dimen name="height_widget">110dp</dimen>
+    <dimen name="width_widget">250dp</dimen>
+    <dimen name="margin_widget_recent">3dp</dimen>
 </resources>
