--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,4 +37,5 @@
     <dimen name="height_widget">110dp</dimen>
     <dimen name="width_widget">250dp</dimen>
     <dimen name="margin_widget_recent">3dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
